# just-rna

./: AGENTS.md  README.md  pyproject.toml
src/just_rna/: __init__.py  assets.py  cli.py  config.py  data.py  evaluation.py  exceptions.py  models.py  prediction.py  quantification.py  registry.py  workflows.py
src/just_rna/clocks/: __init__.py  base.py
src/just_rna/clocks/pasta/resources/: ct46.npz  pasta.npz  reg.npz
src/just_rna/clocks/tage/: __init__.py  clock.py  prediction.py  preprocessing.py
src/just_rna/clocks/tage/resources/: Gene_list_all_4.6.txt  Gene_table_human.csv  Gene_table_monkey.csv  Gene_table_mouse.csv  Gene_table_rat.csv  Orthologs_monkey_to_mouse_5.0.csv  Table_of_orthologs.csv
src/just_rna/datasets/: __init__.py  geo.py  gse225576.py
tests/: test_api.py  test_assets.py  test_evaluation.py  test_gse225576.py  test_integration_gse225576.py  test_quantification.py  test_tage.py
