[project]
name = "just-rna"
version = "0.1.0"
description = "Type-safe transcriptomic aging clocks"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "geofetch>=0.12.11",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "platformdirs>=4.10.0",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "typer>=0.26.8",
]

[project.scripts]
age = "just_rna.cli:age_main"
geo = "just_rna.cli:geo_main"
just-rna = "just_rna:main"
models = "just_rna.cli:models_main"
predict = "just_rna.cli:predict_main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "scikit-learn-stubs>=0.0.3",
    "scipy-stubs>=1.18.0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: uses real network services and public datasets",
]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
